linux/kubernetes/speedtest-tracker/speedtest-tracker-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest-tracker-db
  name: speedtest-tracker-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: speedtest-tracker-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/speedtest-tracker-network: "true"
        io.kompose.service: speedtest-tracker-db
    spec:
      containers:
        - env:
            - name: MARIADB_DATABASE
              value: database_name
            - name: MARIADB_PASSWORD
              value: PasswordForDatabase
            - name: MARIADB_ROOT_PASSWORD
              value: StrongPassword
            - name: MARIADB_USER
              value: speedy
            - name: TZ
              value: America/Panama
          image: mariadb:10
          name: speedtest-db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: speedtest-tracker-db
      restartPolicy: Always
      volumes:
        - name: speedtest-tracker-db
          persistentVolumeClaim:
            claimName: speedtest-tracker-db
status: {}
