linux/kubernetes/speedtest-tracker/speedtest-tracker-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest-tracker-db
  name: speedtest-tracker-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: speedtest-tracker-db
status:
  loadBalancer: {}
