linux/kubernetes/speedtest-tracker/speedtest-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest-tracker
  name: speedtest-tracker
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: speedtest-tracker
status:
  loadBalancer: {}
